--- a/tailscale/config.yaml
+++ b/tailscale/config.yaml
@@ -44,9 +44,10 @@ schema:
   tags:
     - "match(^tag:[a-zA-Z][a-zA-Z0-9-]*$)?"
   taildrop: bool?
-  userspace_networking: bool?
   nextcloud_port: port?
+  hostname: str?
 options:
   proxy: true
   proxy_and_funnel_port: 8443
   nextcloud_port: 8099
+  hostname: nextcloud
